<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">WKuWKu</string>
    <string name="drawer_default_subtitle" translatable="false">Let\'s stay happy!</string>
    <string name="start" translatable="false">START</string>
    <string name="select" translatable="false">SELECT</string>
    <string name="a" translatable="false">A</string>
    <string name="y" translatable="false">Y</string>
    <string name="x" translatable="false">X</string>
    <string name="b" translatable="false">B</string>
    <string name="l2" translatable="false">L2</string>
    <string name="l" translatable="false">L</string>
    <string name="r2" translatable="false">R2</string>
    <string name="r" translatable="false">R</string>
    <string name="a_b" translatable="false">A + B</string>
    <string name="load_game_failed">Failed to load game!</string>
    <string name="add_game_rom">Add a new game</string>
    <string name="add_game">Add game</string>
    <string name="history">History</string>
    <string name="game_library">Games</string>
    <string name="core">Core</string>
    <string name="core_options">Core options</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="last_played_t">Last played</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="select_file">Select File</string>
    <string name="select_file_or_input_url">Select file or input url</string>
    <string name="input_remark_info">Remarks (Optional)</string>
    <string name="system">System</string>
    <string name="region">Region</string>
    <string name="no_title">No Title</string>
    <string name="title_is_required">Title field is required!</string>
    <string name="copy_file_failed">Failed to copy file!</string>
    <string name="fmt_operation_failed">ERROR: %s</string>
    <string name="fmt_download_failed_network_error">Failed to download %s, Network error!</string>
    <string name="operation_failed">Operation failed!</string>
    <string name="successful">successful</string>
    <string name="options">Options</string>
    <string name="never_played">Never</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="detail">Detail</string>
    <string name="attention">Attention</string>
    <string name="delete_confirm">Are you sure you want to delete \"%s\"? \n\nps: this operation cannot be undone!</string>
    <string name="video_options">Video Options</string>
    <string name="input_options">Input Options</string>
    <string name="video_ratio">Video ratio</string>
    <string name="virbration_feedback">Vibration feedback</string>
    <string name="via_qr_code">Via QR code</string>
    <string name="invalid_url">Invalid url</string>
    <string name="connecting">Connecting</string>
    <string name="emulator">Emulator</string>
    <string name="restore_last_state">Restore last state</string>
    <string name="filepath">File path</string>
    <string name="modified">Modified</string>
    <string name="added_date">Added date</string>
    <string name="md5sum" translatable="false">MD5</string>
    <string name="game_detail">Game detail</string>
    <string name="close">Close</string>
    <string name="list_is_empty">🏰 The list is empty</string>
    <string name="please_select_core">Please select core</string>
    <string name="value">Value</string>
    <string name="core_preference">Core preference</string>
    <string name="famicom">Famicon</string>
    <string name="apply">Apply</string>
    <string name="network_timeout">Network timeout!</string>
    <string name="trash">Trash</string>
    <string name="loading">loading</string>
    <string name="fmt_downloading">Downloading %.0f%%</string>
    <string name="downloading_files">Downloading files</string>
    <string name="network_error">Network error</string>
    <string name="c" translatable="false">C</string>
    <string name="z" translatable="false">Z</string>
    <string name="mode" translatable="false">MODE</string>
    <string name="no_matching_emulator_found">No matching emulator found</string>
    <string name="trash_on">Trash on</string>
    <string name="trash_is_clean">✨️Trash is clean</string>
    <string name="copying_files">Copying files</string>
    <string name="emoji_rocket" translatable="false">🚀</string>
    <string name="reverse_landscape">Reverse landscape</string>
    <string name="key_macro">Key macro</string>
    <string name="about">About</string>
    <string name="m2" translatable="false">M2</string>
    <string name="add_macro">Add a macro</string>
    <string name="please_input_macro_script">Please input macro script.</string>
    <string name="key_macro_manage">Macro management</string>
    <string name="fmt_about">Version %s, Built on %s</string>
    <string name="please_input_valid_marco_script">Please input valid marco script</string>
    <string name="m1" translatable="false">M1</string>
    <string name="please_wait">Please wait</string>
    <string name="unzipping_files">Unzipping files</string>
    <string name="fmt_game_already_exists">%s already exists in list</string>
    <string name="could_not_find_valid_rom_file">Could not found valid rom file!</string>
    <string name="unsupported_archive_format">Sorry, this compression format is not currently supported.</string>
    <string name="fmt_file_already_exists">%s already exists.</string>
    <string name="file_already_exists">File already exists.</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_when_gaming">Keep the screen on when gaming</string>
    <string name="summary_reverse_landscape">Reverse screen rotation when entering game</string>
    <string name="summary_input_vibration_feedback">Trigger vibration feedback when pressing the virtual game controller button</string>
    <string name="summary_restore_last_state">Auto restore to the last position after entering the game</string>
    <string name="app_options">Application Options</string>
    <string name="summary_new_version_notification">You will be auto notified when a new version is detected</string>
    <string name="new_version_notification">Version Notification</string>
    <string name="updated">Update</string>
    <string name="ignore_for_now">Ignore</string>
    <string name="version_notification">Version Notification</string>
    <string name="fmt_click_update_to_new_version">Click this notification update to the new version (%s).</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="summary_request_install_package_permission">Oops! App need you to grant the [Install Package] permission before continuing.</string>
    <string name="extension">Extension</string>
    <string name="installed">Installed</string>
    <string name="available">Available</string>
    <string name="no_extensions_installed">🪹 No extensions installed</string>
    <string name="no_available_extensions">🪶 No available extensions</string>
    <string name="install">Install</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="uninstall">Uninstall</string>
    <string name="plug_icon" translatable="false">Plug icon</string>
    <string name="need_restart">Need to restart</string>
    <string name="error_occurred">An error occurred</string>
    <string name="fmt_delete_plug">Are you sure you want to delete the %s extension?</string>
    <string name="fmt_plug_deleted">%s deleted</string>
    <string name="installing">Installing</string>
    <string name="install_failed">Install failed!</string>
    <string name="l3" translatable="false">L3</string>
    <string name="r3" translatable="false">R3</string>
    <string name="load" translatable="false">LOAD</string>
    <string name="fmt_state_saved" translatable="false">Sate State: %d</string>
    <string name="load_state_failed">State load failed!</string>
    <string name="played_just_now">Just played</string>
    <string name="fmt_played_days_ago">Played at %d days ago</string>
    <string name="fmt_played_hours_ago">Played at %d hours ago</string>
    <string name="fmt_played_minutes_ago">Played at %d minutes ago</string>
    <string name="saving_status">Saving status</string>
    <string name="emoji_workshop_source">Background Emoji Source</string>
    <string name="emoji_size">Background Emoji Size</string>
    <string name="emoji_distance">Distance Between Emojis</string>
    <string name="install_from_storage">Install from storage</string>
    <string name="exit_emulator">Exit emulator</string>
    <string name="exit">Exit</string>
    <string name="reset_emulator">Reset emulator</string>
    <string name="reset">Reset</string>
    <string name="upgrade">Upgrade</string>
    <string name="invalid_package">Invalid package!</string>
    <string name="plug_already_installed">This extension already installed!</string>
    <string name="blacklist_auto_load_state">Blacklist: Auto load state</string>
    <string name="summary_black_auto_load_state">Auto load state is unstable on some cores, add this list to disable it</string>
    <string name="publisher">Pub</string>
    <string name="screenshot_saved" translatable="false">Save Screenshot</string>
    <string name="theme">Theme</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="incompatible">Incompatible</string>
    <string name="fmt_input_device_disconnected">Input device: %s disconneted!</string>
    <string name="fmt_input_device_connected">%s connected!</string>
    <string name="audio_options">Audio Options</string>
    <string name="audio_api">Audio API</string>
    <string name="low_latency_mode">Low latency mode</string>
    <string name="use_low_latency_mode">Use low latency mode</string>
    <string name="hotkeys">Hotkeys</string>
    <string name="custom_hotkeys">Custom hotkeys</string>
    <string name="no_binding">No binding</string>
    <string name="bind">Bind</string>
    <string name="waiting_keys">Waiting…</string>
    <string name="no_input_device">No input device!</string>
    <string name="underrun_optimization">Underrun optimization</string>
    <string name="summary_underrun_optimization">Do something when audio underrun occurs</string>
    <string name="summary_switch_to_performance_mode_when_playing">Switch to performance mode when playing (May Consume more power)</string>
    <string name="performance_mode">Performance mode</string>
    <string name="screenshot">Screenshot</string>
    <string name="save_state">Save State</string>
    <string name="save">Save</string>
    <string name="failed_extract">Failed to extract the file.</string>
    <string name="fmt_delete_after_days">Delete after %d days</string>
    <string name="fmt_plug_installed_successfully">%s has been installed successfully!</string>
    <string name="failed_to_access_file">Failed to access file!</string>
    <string name="open" translatable="false">Open</string>
    <string name="rom_is_required">ROM is required!</string>
    <string name="system_is_required">System field is required!</string>
    <string name="none">None</string>
    <string name="path_or_url">Path or URL</string>
    <string name="feat_not_supported">The emulator not supported this feature!</string>
    <string name="virtual_controller_layout">Virtual controller layout</string>
    <string name="device_options">Device options</string>
    <string name="view_options">View options</string>
    <string name="virtual_controller">Virtual controller</string>
    <string name="summary_enable_virtual_controller">Enable virtual controller</string>
    <string name="top_menu">Top menu</string>
    <string name="summary_enable_top_menu">Enable top menu</string>
</resources>