<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/tools">
        <item
            android:id="@+id/menu_trash"
            android:icon="@drawable/ic_recycling"
            android:title="@string/trash"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/menu_extension"
            android:icon="@drawable/ic_extension"
            android:title="@string/extension" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <group
        android:id="@+id/about">
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
</menu>