<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="15dp"
    android:paddingBottom="80dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/left_toggle_group"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_l2"
            android:backgroundTint="@android:color/transparent"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:text="@string/l2" />
        <Button
            android:id="@+id/button_l3"
            android:backgroundTint="@android:color/transparent"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:text="@string/l3" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
    <Button
        android:id="@+id/button_l"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:text="@string/l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/left_toggle_group" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/right_toggle_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_r3"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:text="@string/r3"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_r2"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:text="@string/r2"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_r3" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
    <Button
        android:id="@+id/button_r"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:text="@string/r"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/right_toggle_group" />

    <ink.snowland.wkuwku.view.JoystickView
        android:id="@+id/joystick_view"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_a"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/a"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_b"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="55dp"
        android:text="@string/b"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_x"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="55dp"
        android:text="@string/x"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_y"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="120dp"
        android:text="@string/y"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_a_b"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_b"
        android:textStyle="bold"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_select"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textColor="?attr/colorPrimary" />

        <Button
            android:id="@+id/button_start"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginStart="15dp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/start" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
</androidx.constraintlayout.widget.ConstraintLayout>