<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:paddingBottom="80dp">
    <ink.snowland.wkuwku.view.JoystickView
        android:id="@+id/joystick_view"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:JV_borderWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_a"
        style="@style/Theme.WKuWKu.GPButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/a"
        android:textSize="24sp"
        android:layout_marginEnd="135dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_b"
        style="@style/Theme.WKuWKu.GPButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="45dp"
        android:text="@string/b"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_c"
        style="@style/Theme.WKuWKu.GPButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="65dp"
        android:text="@string/c"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_x"
        style="@style/Theme.WKuWKu.GPButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="155dp"
        android:text="@string/x"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_a"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_y"
        style="@style/Theme.WKuWKu.GPButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="95dp"
        android:text="@string/y"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_b"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_z"
        style="@style/Theme.WKuWKu.GPButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/z"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_c"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_mode"
            style="@style/Theme.WKuWKu.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/mode" />
        <Button
            android:id="@+id/button_start"
            style="@style/Theme.WKuWKu.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/start" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
</androidx.constraintlayout.widget.ConstraintLayout>