<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/utility_tools">
        <item
            android:id="@+id/action_trash"
            android:icon="@drawable/ic_recycling"
            android:title="@string/trash"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/action_macro"
            android:icon="@drawable/ic_smart_toy"
            android:title="@string/key_macro" />
        <item
            android:id="@+id/action_extension"
            android:icon="@drawable/ic_extension"
            android:title="@string/app_extension" />
    </group>
    <group
        android:id="@+id/information">
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
</menu>